<resources>
    <string name="Call">Call</string>
    <string name="input_number">Input number</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="title_spam_protection">Spam</string>
    <string name="title_check_number">Check number</string>
    <string name="title_call_log">Call log</string>
    <string name="title_settings">Settings</string>
    <string name="share_it">Share it</string>
    <string name="share_about_caller_id">Share about Caller ID</string>
    <string name="number">Number</string>
    <string name="comment">Comment</string>
    <string name="icon">Icon</string>
    <string name="allow">Allow</string>
    <string name="number_of_phone">Number of phone</string>
    <string name="this_is_spam">This is Spam</string>
    <string name="add_category">Add Category</string>
    <string name="spamer">Spamer</string>
    <string name="this_is_not_spam">This is not Spam</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="searchtitle" translatable="false">searchTitle</string>
    <string name="update_database_from_cloud">Update Database from cloud</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_is_enabled">Dark Mode is enabled</string>
    <string name="light_mode_is_enabled">Light Mode</string>

</resources>
