<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Caller_ID.ui.spamProtection.AddNumberActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/YTextInputLayout"
        android:id="@+id/numberOfPhoneLay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:hint="@string/number_of_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/numberOfPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton

        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_category"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isSpamTextView" />

    <TextView
        android:id="@+id/isSpamTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPhoneLay"
        tools:text="TextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/update_database_from_cloud"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>